# sta

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  debugging.txt  env.bat  get_assets.sh  sta.sln  sta.vcxproj  sta.vcxproj.filters
contrib/glad/: glad.c
contrib/glad/glad/: glad.h
src/: clargs.cpp  clargs.hpp  controllers.cpp  controllers.hpp  cpu_cycles.hpp  cpu_mnemonics.hpp  cpu_opcodes.hpp  defs.hpp  disasm.cpp  disasm.hpp  emu.cpp  emu.hpp  gui.cpp  gui.hpp  gui_filebrowser.cpp  gui_filebrowser.hpp  gui_opengl.hpp  gui_opengl_surface.cpp  gui_opengl_surface.hpp  inputs.cpp  inputs.hpp  keynames.hpp  main.cpp  mappers.hpp  mem.cpp  mem.hpp  ppu.cpp  ppu.hpp  rom.cpp  rom.hpp  util.cpp  util.hpp
src/core/: gamepad.cpp  gamepad.hpp  recents.cpp  recents.hpp  util.cpp  util.hpp
src/core/gui/: filebrowser.cpp  gui.cpp  gui.hpp  gui_gamepad.cpp  gui_gamepad.hpp  manager.hpp  notifications.cpp  notifications.hpp  opengl.cpp  opengl.hpp  opengl_surface.cpp  opengl_surface.hpp
src/gui/: gui_controls.cpp  gui_disasm.cpp  gui_emustate.cpp  gui_memory.cpp  gui_oam.cpp  gui_patterntbl.cpp  gui_rominfo.cpp  gui_window.cpp  gui_window.hpp
src/mappers/: mapper.cpp  mapper.hpp  mapper000.cpp  mapper000.hpp  mapper001.cpp  mapper001.hpp
src/nes/: controllers.cpp  controllers.hpp  cpu_mnemonics.hpp  disasm.cpp  disasm.hpp  emu.cpp  emu.hpp  main.cpp  mem.cpp  palette.cpp  palette.hpp  ppu.cpp  ppu.hpp  rom.cpp  rom.hpp
src/nes/gui/: gui_controls.cpp  gui_disasm.cpp  gui_emustate.cpp  gui_memory.cpp  gui_oam.cpp  gui_patterntbl.cpp  gui_rominfo.cpp  gui_setupcontrollers.cpp
src/nes/mappers/: mapper.cpp  mapper000.cpp  mapper001.cpp  mapper001.hpp
